# gen3-ai

./: .gitignore  .justfile_helpers.bash  .pre-commit-config.yaml  .secrets.baseline  .snyk  Dockerfile  Dockerfile.k8s  NOTICE  README.md  justfile  ruff.toml
.github/workflows/: auto_updates.yml  automation.yml  markdown_validation.yml
deployments/: README.md
deployments/k8s/services/gen3_ai_model_repo/: gunicorn.conf.py
deployments/k8s/services/gen3_embeddings/: dockerrun.bash
deployments/k8s/services/gen3_inference/: dockerrun.bash
docs/: README.md  ai_api.yaml  api.html  autogenerated_openapi.json  hf_api_poc.md  metrics.md  vscode.md
libraries/common/: __init__.py  pyproject.toml
libraries/common/src/common/: auth.py  config.py  metrics.py  utils.py
libraries/common/src/common/fastapi/routes/: common.py
libraries/common/src/common/migrations/: cli.py
scripts/: .justfile_helpers.bash  check_dependencies.bash  merge_openapi.py
services/gen3_ai_model_repo/: dockerrun.bash  generate_openapi.py  pyproject.toml
services/gen3_ai_model_repo/docs/: autogenerated_openapi.json
services/gen3_ai_model_repo/src/gen3_ai_model_repo/: config.py  main.py
services/gen3_embeddings/: README.md  generate_openapi.py  gunicorn.conf.py  pyproject.toml  run.py
services/gen3_embeddings/db_migrations/0/: 0.sql
services/gen3_embeddings/docs/: autogenerated_openapi.json
services/gen3_embeddings/src/gen3_embeddings/: auth.py  config.py  db.py  main.py
services/gen3_embeddings/src/gen3_embeddings/database/: db.py  helpers.py
services/gen3_embeddings/src/gen3_embeddings/models/: helpers.py  schemas.py
services/gen3_embeddings/src/gen3_embeddings/routes/: collections.py  embeddings.py  search.py  vector_indexing.py  vector_search.py
services/gen3_inference/: README.md  generate_openapi.py  gunicorn.conf.py  pyproject.toml
services/gen3_inference/docs/: autogenerated_openapi.json
services/gen3_inference/src/gen3_inference/: config.py  errors.py  main.py  metrics.py  types.py
services/gen3_inference/src/gen3_inference/inference_protocols/: base.py  kserve_v2.py  openai_chat.py  openresponses.py
services/gen3_inference/src/gen3_inference/inference_protocols/utils/: openai_chat_to_openresponses.py  openai_responses_to_openresponses.py  openai_to_openresponses.py  openresponses_to_chatcompletion.py
services/gen3_inference/src/gen3_inference/routes/: basic.py  responses.py
services/gen3_inference/tests/: conftest.py  test_openai_chat.py  test_responses_detail.py  test_responses_simple.py
