[project]
name = "gen3_embeddings"
version = "0.1.0"
description = "Gen3 Embeddings"
dependencies = [
    "asyncpg",
    "common",
]
requires-python = "~=3.13.0"

[dependency-groups]
dev = []

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { path = "../../libraries/common" }

[tool.hatch.build.targets.wheel]
packages = ["src/gen3_embeddings"]
