[project]
name = "gen3_inference"
version = "0.1.0"
description = "Gen3 Inference"
dependencies = [
    "common",
    "openai>=2.30.0",
    "openresponses-types>=2.3.0.post1",
]
requires-python = "~=3.13.0"

[dependency-groups]
dev = []

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { path = "../../libraries/common" }

[tool.hatch.build.targets.wheel]
packages = ["src/gen3_inference"]
